welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:29: error: not found: value occurences
  var occ = occurences(nums, max)
            ^